--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,20 @@
     <link rel="stylesheet" href="css/style.css">
     <title>videoConsola</title>
 </head>
+
 <body>
-    <div class="conteiner">
-        <section></section>
+    <div class=" displey__grid">
+        <section class="joycon__izq joycon__tamaño">
+        </section>
         <main>
             <div>
-                <img src="img/Nintendo-Switch-imagen.jpg" alt="Pantalla"><!--alto 330,708px ancho  562,204px con un borde en black-->
-                <div><button></button></div>
+                <img src="img/Nintendo-Switch-imagen.jpg" alt="Pantalla" class="screen">
+                <!--alto 330,708px ancho  562,204px con un borde en black-->
             </div>
         </main>
-        <section>h</section>
+        <section class="joycon__tamaño--center"><img src="img/logoswitch.png" alt="Logo Nintendo" class="joycon__center--img"></section>
+        <section class="joycon__tamaño joycon__dch"></section>
     </div>
 </body>
+
 </html>
