--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>videoConsola</title>
 </head>
 
 <body>
     <div class=" displey__grid">
-        <section class="joycon__izq joycon__tamaño">
-        </section>
+        <section class="joycon__izq joycon__tamaño"></section>
         <main>
             <div>
                 <img src="img/Nintendo-Switch-imagen.jpg" alt="Pantalla" class="screen">
-                <!--alto 330,708px ancho  562,204px con un borde en black-->
+                <!--alto 330,708px (9690,71px solo de la pantalla) ancho  562,204px (5775,12 px solo pantalla) con un borde en black-->
             </div>
         </main>
-        <section class="joycon__tamaño--center"><img src="img/logoswitch.png" alt="Logo Nintendo" class="joycon__center--img"></section>
+        <!-- <section class="joycon__tamaño--center"><img src="img/logoswitch.png" alt="Logo Nintendo" class="joycon__center--img"></section> -->
         <section class="joycon__tamaño joycon__dch"></section>
     </div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
