--- a/index.html
+++ b/index.html
@@ -11,16 +11,31 @@
 </head>
 
 <body>
-    <div class=" displey__grid">
-        <section class="joycon__izq joycon__tamaño"></section>
-        <main>
-            <div>
-                <img src="img/Nintendo-Switch-imagen.jpg" alt="Pantalla" class="screen">
-                <!--alto 330,708px (9690,71px solo de la pantalla) ancho  562,204px (5775,12 px solo pantalla) con un borde en black-->
-            </div>
-        </main>
+    <div class="consola__todo displey__grid">
+        <div class="joycon__tamaño no__margin no__padding joycon__izq botones">
+            <button class="botones__boton">+</button>
+            <button class="botones__boton boton--pad">pad</button>
+            <button class="botones__boton boton--flecha1">fecha1</button>
+            <button class="botones__boton boton--flecha2">fecha2</button>
+            <button class="botones__boton boton--flecha3">fecha3</button>
+            <button class="botones__boton boton--flecha4">fecha4</button>
+            <button class="botones__boton boton--encendido">boton encendido</button>
+        </div>
+        <!--tamaño del joycon ancho 600px alto 2070-->
+        <div>
+            <img src="img/Nintendo-Switch-imagen.jpg" alt="Pantalla" class="screen">
+            <!--alto 330,708px (9690,71px solo de la pantalla) ancho  562,204px (5775,12 px solo pantalla) con un borde en black-->
+        </div>
         <!-- <section class="joycon__tamaño--center"><img src="img/logoswitch.png" alt="Logo Nintendo" class="joycon__center--img"></section> -->
-        <section class="joycon__tamaño joycon__dch"></section>
+        <div class="joycon__tamaño no__margin no__padding joycon__dch botones">
+            <button class="botones__boton">+</button>
+            <button class="botones__boton boton--flecha1">fecha1</button>
+            <button class="botones__boton boton--flecha2">fecha2</button>
+            <button class="botones__boton boton--flecha3">fecha3</button>
+            <button class="botones__boton boton--flecha4">fecha4</button>
+            <button class="botones__boton boton--pad">pad</button>
+            <button class="botones__boton boton--encendido">boton encendido</button>
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
