--- a/index.html
+++ b/index.html
@@ -11,30 +11,34 @@
 </head>
 
 <body>
-    <div class="consola__todo displey__grid">
+    <div class="consola__todo">
         <div class="joycon__tamaño no__margin no__padding joycon__izq botones">
-            <button class="botones__boton"><img src="img/bx-plus (1).svg" alt="plus" class="boton__img"></button>
-            <button class="botones__boton boton--pad">pad</button>
-            <button class="botones__boton boton--flecha1"><img src="img/bxs-up-arrow-circle.png" alt="up" class="joystick__up"></button>
-            <button class="botones__boton boton--flecha2"><img src="img/bxs-left-arrow-circle.png" alt="left" class="joystick__left"></button>
-            <button class="botones__boton boton--flecha3"><img src="img/bxs-right-arrow-circle.png" alt="right" class="joystick__right"></button>
-            <button class="botones__boton boton--flecha4"><img src="img/bxs-down-arrow-circle.png" alt="down" class="joystick__down"></button>
-            <button class="botones__boton boton--encendido">boton encendido</button>
+            <button class="botones__boton boton__minus no__margin no__padding"><img src="img/bx-minus.png" alt="plus" class="minus--img"></button>
+            <button class="botones__boton boton__pad no__padding"><div class="pad"></div></button>
+            <div class="colocacion__joycon--flechas grid">
+                <button class="botones__boton boton--flecha1"><img src="img/bxs-up-arrow-circle.png" alt="up" class="joystick__up"></button>
+                <button class="botones__boton boton--flecha2"><img src="img/bxs-left-arrow-circle.png" alt="left" class="joystick__left"></button>
+                <button class="botones__boton boton--flecha3"><img src="img/bxs-right-arrow-circle.png" alt="right" class="joystick__right"></button>
+                <button class="botones__boton boton--flecha4"><img src="img/bxs-down-arrow-circle.png" alt="down" class="joystick__down"></button>
+            </div>
+            <button class="botones__boton boton--encendido"><img src="img/power-button.png" alt="boton enenctido" class="encendido__img" id="color" onclick="encender()"></button>
         </div>
         <!--tamaño del joycon ancho 600px alto 2070-->
-        <!-- <div>
+        <div>
             <img src="img/Nintendo-Switch-imagen.jpg" alt="Pantalla" class="screen">
             <!--alto 330,708px (9690,71px solo de la pantalla) ancho  562,204px (5775,12 px solo pantalla) con un borde en black-->
-        <!--</div> -->
+        </div>
         <!-- <section class="joycon__tamaño--center"><img src="img/logoswitch.png" alt="Logo Nintendo" class="joycon__center--img"></section> -->
         <div class="joycon__tamaño no__margin no__padding joycon__dch botones">
-            <button class="botones__boton">+</button>
-            <button class="botones__boton boton--flecha1">fecha1</button>
-            <button class="botones__boton boton--flecha2">fecha2</button>
-            <button class="botones__boton boton--flecha3">fecha3</button>
-            <button class="botones__boton boton--flecha4">fecha4</button>
-            <button class="botones__boton boton--pad">pad</button>
-            <button class="botones__boton boton--encendido">boton encendido</button>
+            <button class="botones__boton boton__plus no__margin no__padding"><img src="img/bx-plus.png" alt="plus" class="plus--img"></button>
+            <div class="colocacion__joycon--flechas--left grid">
+                <button class="botones__boton boton--flecha1"><img src="img/bxs-up-arrow-circle.png" alt="up" class="joystick__up"></button>
+                <button class="botones__boton boton--flecha2"><img src="img/bxs-left-arrow-circle.png" alt="left" class="joystick__left"></button>
+                <button class="botones__boton boton--flecha3"><img src="img/bxs-right-arrow-circle.png" alt="right" class="joystick__right"></button>
+                <button class="botones__boton boton--flecha4"><img src="img/bxs-down-arrow-circle.png" alt="down" class="joystick__down"></button>
+            </div>
+            <button class="botones__boton boton__pad--left no__padding"><div class="pad"></div></button>
+            <button class="botones__boton"><img src="img/bxs-home (1).svg" alt="boton encendido" class="boton__home"></button>
         </div>
     </div>
     <script src="js/main.js"></script>
